--- a/index.html
+++ b/index.html
@@ -123,29 +123,32 @@
         <div class="container">
         <h2 class="title">Чим ми займаємося</h2>
         <ul class="list examples-list">
-          <li>
+          <li class="examples-item">
             <img
               src="./images/desktop.jpg"
               alt="десктопні технології"
               width="370"
               height="294"
             />
+            <p class="examples-text">Десктопні додатки</p>
           </li>
-          <li>
+          <li class="examples-item">
             <img
               src="./images/mobile.jpg"
               alt="мобільні технології"
               width="370"
               height="294"
             />
+            <p class="examples-text">Мобільні додатки</p>
           </li>
-          <li>
+          <li class="examples-item">
             <img
               src="./images/color.jpg"
               alt="глибина кольору"
               width="370"
               height="294"
             />
+            <p class="examples-text">Дизайнерські рішення</p>
           </li>
         </ul>
       </section>
