--- a/portfolio.html
+++ b/portfolio.html
@@ -86,13 +86,21 @@
           <ul class="list portfolio-list">
             <li class="portfolio-item">
               <a class="portfolio-card" href="">
-                <img
-                  class="portfolio-photo"
-                  src="./images/portfolio/img1.jpg"
-                  alt="технокряк"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-card-back">
+                  <img
+                    class="portfolio-photo"
+                    src="./images/portfolio/img1.jpg"
+                    alt="технокряк"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-back-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+
                 <div class="portfolio-inform">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -101,13 +109,20 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-card" href="">
-                <img
-                  class="portfolio-photo"
-                  src="./images/portfolio/img2.jpg"
-                  alt="постер"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-card-back">
+                  <img
+                    class="portfolio-photo"
+                    src="./images/portfolio/img2.jpg"
+                    alt="постер"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-back-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-inform">
                   <h2 class="portfolio-title">
                     Постер New Orlean vs Golden Star
@@ -118,13 +133,20 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-card" href="">
-                <img
-                  class="portfolio-photo"
-                  src="./images/portfolio/img3.jpg"
-                  alt="ресторан"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-card-back">
+                  <img
+                    class="portfolio-photo"
+                    src="./images/portfolio/img3.jpg"
+                    alt="ресторан"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-back-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-inform">
                   <h2 class="portfolio-title">Ресторан Seafood</h2>
                   <p class="portfolio-text">Додаток</p>
@@ -133,13 +155,20 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-card" href="">
-                <img
-                  class="portfolio-photo"
-                  src="./images/portfolio/img4.jpg"
-                  alt="проєкт"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-card-back">
+                  <img
+                    class="portfolio-photo"
+                    src="./images/portfolio/img4.jpg"
+                    alt="проєкт"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-back-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-inform">
                   <h2 class="portfolio-title">Проєкт Prime</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -148,13 +177,20 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-card" href="">
-                <img
-                  class="portfolio-photo"
-                  src="./images/portfolio/img5.jpg"
-                  alt="проєкт"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-card-back">
+                  <img
+                    class="portfolio-photo"
+                    src="./images/portfolio/img5.jpg"
+                    alt="проєкт"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-back-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-inform">
                   <h2 class="portfolio-title">Проєкт Boxes</h2>
                   <p class="portfolio-text">Додаток</p>
@@ -163,13 +199,20 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-card" href="">
-                <img
-                  class="portfolio-photo"
-                  src="./images/portfolio/img6.jpg"
-                  alt="вебсайт"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-card-back">
+                  <img
+                    class="portfolio-photo"
+                    src="./images/portfolio/img6.jpg"
+                    alt="вебсайт"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-back-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-inform">
                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -178,13 +221,20 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-card" href="">
-                <img
-                  class="portfolio-photo"
-                  src="./images/portfolio/img7.jpg"
-                  alt="видання"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-card-back">
+                  <img
+                    class="portfolio-photo"
+                    src="./images/portfolio/img7.jpg"
+                    alt="видання"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-back-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-inform">
                   <h2 class="portfolio-title">Видання Limited Edition</h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -193,13 +243,20 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-card" href="">
-                <img
-                  class="portfolio-photo"
-                  src="./images/portfolio/img8.jpg"
-                  alt="проєкт"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-card-back">
+                  <img
+                    class="portfolio-photo"
+                    src="./images/portfolio/img8.jpg"
+                    alt="проєкт"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-back-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-inform">
                   <h2 class="portfolio-title">Проєкт LAB</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -208,13 +265,20 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-card" href="">
-                <img
-                  class="portfolio-photo"
-                  src="./images/portfolio/img9.jpg"
-                  alt="додаток"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-card-back">
+                  <img
+                    class="portfolio-photo"
+                    src="./images/portfolio/img9.jpg"
+                    alt="додаток"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-back-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="portfolio-inform">
                   <h2 class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-text">Додаток</p>
