--- a/index.html
+++ b/index.html
@@ -433,5 +433,14 @@
     </div>
   </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <button type="button" class="modal-button">
+          <svg class="icon-close" width="14" height="14">
+            <use href="./images/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
   </body>
 </html>
