--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="button" type="button">Замовити послугу</button>
+          <button class="button" type="button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
       <!--Our advantages-->
@@ -433,14 +433,16 @@
     </div>
   </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="modal-button">
+        <button type="button" class="modal-button" data-modal-close>
           <svg class="icon-close" width="14" height="14">
             <use href="./images/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
       </div>
     </div>
+    <script src="./js/modal.js"></script>
+
   </body>
 </html>
